--- a/content/2023-12-05-Sanguine.md
+++ b/content/2023-12-05-Sanguine.md
@@ -2,6 +2,7 @@
 title = "Sanguine"
 date = 2023-12-05
 description = "Post description"
+authors = ["person@example.com (A. Person)"]
 extra = {header_img = "/2023-12-05-002.png"}
 +++
 
