--- a/content/2023-12-05-Sanguine.md
+++ b/content/2023-12-05-Sanguine.md
@@ -1,10 +1,23 @@
 +++
 title = "Sanguine"
-date = 2023-12-05
-description = "Post description"
+date = 2023-12-07
+description = "Generative Art Framework in Rust"
 extra = {header_img = "/2023-12-05-002.png"}
 +++
 
 Sanguine or red chalk is a mineral pigment made of clay and hematite (Fe<sub>2</sub>O<sub>3</sub>). It is deep red in color and has been used for artistic expression already by the neanderthals. Since the renaissance it has been shaped into a kind of pencil, used mainly for sketches similar to graphite pencils today.
 
 The goal is to build a framework for generative art for pen plotters in Rust.
+
+Some features I have in mind:
+
+- generate art as svg
+- parse a limited number of shapes from svg files (WIP).
+- add more organic ways to generate images, such as Voronoi diagrams.
+- experiment with L-systems.
+- add camera input, so the generated art can be a reaction to what already is on paper.
+- project layout that allows for easy transitions between creating art work with lots of predefined functions, writing custom parts for the frame work and switching between different works of art.
+- generate art without svg output, by addressing the pen plotter directly.
+- input from hardware RNGs.
+
+You can also follow the project over at [github](https://github.com/Mirabellensaft/sanguine). Output that I do consider art will also be posted at [instagram](https://www.instagram.com/tanks_transfeld/).
