--- a/content/2023-12-05-Sanguine.md
+++ b/content/2023-12-05-Sanguine.md
@@ -13,11 +13,18 @@ Some features I have in mind:
 
 - generate art as svg
 - parse a limited number of shapes from svg files (WIP).
-- add more organic ways to generate images, such as Voronoi diagrams.
+- add more organic ways to generate images, such as voronoi diagrams
+- adapt composition things to work with voronoi diagrams (WIP)
 - experiment with L-systems.
+- add noise generator
 - add camera input, so the generated art can be a reaction to what already is on paper.
 - project layout that allows for easy transitions between creating art work with lots of predefined functions, writing custom parts for the frame work and switching between different works of art.
-- generate art without svg output, by addressing the pen plotter directly.
-- input from hardware RNGs.
+- generate art without svg output, by addressing the pen plotter directly
+- input from hardware rngs
+- Docs and Website
 
 You can also follow the project over at [github](https://github.com/Mirabellensaft/sanguine). Output that I do consider art will also be posted at [instagram](https://www.instagram.com/tanks_transfeld/).
+
+Support this work or buy my art works over at 
+
+<a href='https://ko-fi.com/S6S0N8I4U' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi5.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
