--- a/content/2023-10-16-Fatzke.md
+++ b/content/2023-10-16-Fatzke.md
@@ -4,13 +4,13 @@ date = 2023-10-16
 description = "About Experimenting"
 extra = {header_img = "/2023-10-16-001.jpg"}
 +++
-*agility, pompous! (rough translation of the german derogatory term Fatzke, an arrogant person.) Two words on two dictionary pages that ended up next to each other in a prominent place in a collage. Or rather should have ended up there, and are now barely visible.
+*agility, pompous! (Rough translation of the german derogatory term Fatzke, meaning arrogant person.) Two words on two dictionary pages that ended up next to each other in a prominent place in a collage. Or rather should have ended up there, and are now barely visible.
 
 I like working with found books. I prefer non-fiction, collections of information, tables, lists, formulas and scientific illustrations. Preferably older editions. I like how the type fonts are just different then what we're used to today. I like old paper. Usually I take pieces out of the books and glue them to artist grade paper or canvases. I use a lot of acrylic binder in the process so the old paper is basically encased in plastic, once dried. I paint over them with all sorts of paints and colors, so they only appear in traces in the finished work and are well worked in and safe. But sometimes I experiment. 
 
 I painted directly on the wet dictionary pages, with home made walnut ink. With acrylic paint. With more liquid acrylic paint and chinese ink. I let the sheets dry. The tape I used to mount the pages was already hard to get off without ripping the delicate, flimsy dictionary paper apart. It was also the strong tape, the one that's water resistent. Not the one for delicate papers. 
 
-In the next step, I wanted to cut the pages, and make a new piece about the size of one page. I cut the pages, taped the new edges together, cut them in another place, and taped the edges together. I wanted to keep it short. To not let the tape stick longer then necessary. I cut the outer edges and glued the piece to more sturdy piece of paper. 
+In the next step, I wanted to cut the pages into pieces and stick the pieces together in a new way to make a piece about the size of one page. I cut the pages, taped the new edges together so they stay aligned. I repeated this step a couple of times, wanting to keep it short to not let the tape stick longer then necessary. I cut the outer edges and glued the piece to more sturdy piece of paper. 
 
 <div class="gallery">
     <a href="/2023-10-16-001.jpg" data-ngthumb="/2023-10-16-001.jpg"></a>
