--- a/content/2023-10-16-Fatzke.md
+++ b/content/2023-10-16-Fatzke.md
@@ -4,13 +4,13 @@ date = 2023-10-16
 description = "About Experimenting"
 extra = {header_img = "/2023-10-16-001.jpg"}
 +++
-*agility, pompous! (Rough translation of the german derogatory term Fatzke, meaning arrogant person.) Two words on two dictionary pages that ended up next to each other in a prominent place in a collage. Or rather should have ended up there, and are now barely visible.
+*agility, pompous! (Rough translation of the German derogatory term Fatzke, meaning arrogant person.) Two words on two dictionary pages that ended up next to each other in a prominent place in a collage. Or rather should have ended up there, and are now barely visible.
 
-I like working with found books. I prefer non-fiction, collections of information, tables, lists, formulas and scientific illustrations. Preferably older editions. I like how the type fonts are just different then what we're used to today. I like old paper. Usually I take pieces out of the books and glue them to artist grade paper or canvases. I use a lot of acrylic binder in the process so the old paper is basically encased in plastic, once dried. I paint over them with all sorts of paints and colors, so they only appear in traces in the finished work and are well worked in and safe. But sometimes I experiment. 
+I like working with found books. I prefer non-fiction, collections of information, tables, lists, formulas and scientific illustrations. Preferably older editions. I like how the type fonts are just different from what we're used to today. I like old paper. Usually I take pieces out of the books and glue them to artist grade paper or canvases. I use a lot of acrylic binder in the process, so the old paper is basically encased in plastic, once dried. I paint over them with all sorts of paints and colors, so they only appear in traces in the finished work and are well worked in and safe. But sometimes I experiment. 
 
-I painted directly on the wet dictionary pages, with home made walnut ink. With acrylic paint. With more liquid acrylic paint and chinese ink. I let the sheets dry. The tape I used to mount the pages was already hard to get off without ripping the delicate, flimsy dictionary paper apart. It was also the strong tape, the one that's water resistent. Not the one for delicate papers. 
+I painted directly on the wet dictionary pages, with homemade walnut ink. With acrylic paint. With more liquid acrylic paint and Chinese ink. I let the sheets dry. The tape I used to mount the pages was already hard to get off without ripping the delicate, flimsy dictionary paper apart. It was also the strong tape, the one that's water-resistant. Not the one for delicate papers. 
 
-In the next step, I wanted to cut the pages into pieces and stick the pieces together in a new way to make a piece about the size of one page. I cut the pages, taped the new edges together so they stay aligned. I repeated this step a couple of times, wanting to keep it short to not let the tape stick longer then necessary. I cut the outer edges and glued the piece to more sturdy piece of paper. 
+In the next step, I wanted to cut the pages into pieces and stick the pieces together in a new way to make a piece about the size of one page. I cut the pages, taped the new edges together, so they stay aligned. I repeated this step a couple of times, wanting to keep it short to not let the tape stick longer then necessary. I cut the outer edges and glued the piece to more sturdy piece of paper. 
 
 <div class="gallery">
     <a href="/2023-10-16-001.jpg" data-ngthumb="/2023-10-16-001.jpg"></a>
@@ -24,6 +24,6 @@ What now? I liked the process a lot. I can envision, what this would have looked
 
 Taking a closer look, I figured that the paper ripped exactly in the spots where there was no acrylic paint, but where the paper was probably not only damaged by age but by the wet technique. Covering the entire peace with acrylic binder may protect it, alone because tape can be removed easier from smooth surfaces. Next time. 
 
-Support this work or buy my art works over at 
+<!-- Support this work or buy my art works over at 
 
-<a href='https://ko-fi.com/S6S0N8I4U' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi5.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+<a href='https://ko-fi.com/S6S0N8I4U' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi5.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a> -->
