--- a/content/2023-11-09-Sanguine.md
+++ b/content/2023-11-09-Sanguine.md
@@ -25,6 +25,6 @@ Some features I have in mind:
 
 You can also follow the project over at [github](https://github.com/Mirabellensaft/sanguine). Output that I do consider art will also be posted at [instagram](https://www.instagram.com/tanks_transfeld/).
 
-Support this work or buy my art works over at 
+<!-- Support this work or buy my art works over at 
 
-<a href='https://ko-fi.com/S6S0N8I4U' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi5.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+<a href='https://ko-fi.com/S6S0N8I4U' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi5.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a> -->
